--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,5 +12,5 @@ on:
 
 jobs:
   call-terraform-release-pipeline:
-    uses: terraform-ibm-modules/common-dev-assets/.github/workflows/release.yml@main
+    uses: terraform-ibm-modules/common-dev-assets/.github/workflows/release.yml@release-pipeline-work
     secrets: inherit
