ci: temp point release to look at work branch

--- a/.releaserc
+++ b/.releaserc
@@ -1,7 +1,7 @@
 {
     "tagFormat": "v${version}",
     "branches": [
-        "main"
+        "release-pipeline-work"
     ],
     "plugins": [
         "@semantic-release/commit-analyzer",
