--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,5 +12,6 @@ on:
 
 jobs:
   call-terraform-release-pipeline:
+    if: ${{ github.event_name == 'workflow_dispatch' || (github.event_name == 'workflow_run' && github.event.workflow_run.conclusion == 'success') }}
     uses: terraform-ibm-modules/common-dev-assets/.github/workflows/release.yml@main
     secrets: inherit
