--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,17 +1,51 @@
-name: CI-Pipeline
+name: Terraform-Module-CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+  workflow_call:
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
+# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  call-terraform-ci-pipeline:
-    uses: terraform-ibm-modules/common-dev-assets/.github/workflows/terraform-module-ci.yml@main
-    secrets: inherit
+  CI_PIPELINE:
+    # The type of runner that the job will run on
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
+    container:
+      image: icr.io/goldeneye_images/goldeneye-ci-image:stable
+      # env:
+      #   TF_VAR_ibmcloud_api_key: ${{ secrets.IBMCLOUD_API_KEY }}
+      #   IC_API_KEY: ${{ secrets.IBMCLOUD_API_KEY }}
+      #   GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      #   NO_CONTAINER: "true"
+
+    # Steps represent a sequence of tasks that will be executed as part of the job
+    steps:
+      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - uses: actions/checkout@v3
+        with:
+          submodules: true
+          # Clone all branches and history. This is needed for the upgrade tests
+          fetch-depth: 0
+
+      # Check for pre-commit updates if it is a renovate PR
+      - name: Pre-commit sweeper
+        run: |
+          # Setup environment since GHA does not run the containers entrypoint
+          . /root/.bashrc
+          . /root/.profile
+          make pre-commit-sweeper
+      # run pre-commit against all files
+      - name: Pre-commit
+        run: |
+          # Setup environment since GHA does not run the containers entrypoint
+          . /root/.bashrc
+          . /root/.profile
+          make pre-commit
+      # run unit tests
+      # - name: Unit Tests
+      #   run: |
+      #     # Setup environment since GHA does not run the containers entrypoint
+      #     . /root/.bashrc
+      #     . /root/.profile
+      #     make run-tests
