ci: (settings) remo default name

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -13,7 +13,7 @@ repository:
   # See https://terraform-ibm-modules.github.io/documentation/#/implementation-guidelines?id=module-names-and-descriptions
 
   # By changing this field, you rename the repository.
-  name: "terraform-ibm-module-template"
+  name:
 
   # The description is displayed under the repository name on the
   # organization page and in the 'About' section of the repository.
