--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -13,8 +13,13 @@ repository:
   # See https://terraform-ibm-modules.github.io/documentation/#/implementation-guidelines?id=module-names-and-descriptions
 
   # By changing this field, you rename the repository.
-  name:
+
+  # Uncomment this name property and set the name to the current repo name.
+  # name: ""
 
   # The description is displayed under the repository name on the
   # organization page and in the 'About' section of the repository.
-  description: "Template for starting a new module"
+
+  # Uncomment this description property
+  # and update the description to the current repo description.
+  # description: ""
