--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -23,3 +23,7 @@ repository:
   # Uncomment this description property
   # and update the description to the current repo description.
   # description: ""
+  
+  # Uncomment this topics property
+  # and add a comma-separated list of topics to set on the repo.
+  # topics: core-team
